[package]
name = "wt-rs"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
grpcio = "0.3"
protobuf = "2.0"
futures = "0.1"

[build-dependencies]
bindgen = "0.26"
protoc-grpcio = "0.2.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "wt"
harness = false

